[gd_scene load_steps=15 format=2]

[ext_resource path="res://sprite/eyeframes.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Mousician.gd" type="Script" id=2]
[ext_resource path="res://ActionButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://ActionMenu.gd" type="Script" id=4]
[ext_resource path="res://sprite/sharpen3.png" type="Texture" id=5]
[ext_resource path="res://sprite/sharpen2.png" type="Texture" id=6]
[ext_resource path="res://sprite/sharpen1.png" type="Texture" id=7]
[ext_resource path="res://sprite/flatten3.png" type="Texture" id=8]
[ext_resource path="res://sprite/flatten1.png" type="Texture" id=9]
[ext_resource path="res://sprite/flatten2.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64.9053, 109.394 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 954.333, 105.412 )

[node name="Mousician" type="Area2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1, 0 )
scale = Vector2( 0.5, 0.5 )
frames = ExtResource( 1 )
frame = 3
playing = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "Healthy"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ActionMenu" type="Area2D" parent="."]
visible = false
z_index = 500
script = ExtResource( 4 )

[node name="Sharpen" parent="ActionMenu" instance=ExtResource( 3 )]
position = Vector2( 0, -50 )

[node name="AnimatedSprite" parent="ActionMenu/Sharpen" index="2"]
frames = SubResource( 3 )
animation = "default"
frame = 2

[node name="Flatten" parent="ActionMenu" instance=ExtResource( 3 )]
position = Vector2( 0, 50 )

[node name="AnimatedSprite" parent="ActionMenu/Flatten" index="2"]
frames = SubResource( 4 )
animation = "default"
frame = 2

[node name="Push" parent="ActionMenu" instance=ExtResource( 3 )]
position = Vector2( 50, 0 )

[node name="Pull" parent="ActionMenu" instance=ExtResource( 3 )]
position = Vector2( -50, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionMenu"]
scale = Vector2( -10.9485, -41.0251 )
shape = SubResource( 2 )
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="cancel" from="ActionMenu" to="." method="_on_ActionMenu_cancel"]
[connection signal="performAction" from="ActionMenu/Sharpen" to="." method="_on_Sharpen_performAction"]
[connection signal="performAction" from="ActionMenu/Flatten" to="." method="_on_Flatten_performAction"]
[connection signal="performAction" from="ActionMenu/Push" to="." method="_on_Push_performAction"]
[connection signal="performAction" from="ActionMenu/Pull" to="." method="_on_Pull_performAction"]

[editable path="ActionMenu/Sharpen"]

[editable path="ActionMenu/Flatten"]
